--- a/src/views/login.html
+++ b/src/views/login.html
@@ -144,7 +144,7 @@
 			<div class="pass">Forgot Password?</div>
 			<input type="submit" value="Login">
 			<div class="signup_link">
-				Not a member? <a href="signup.html">Signup</a>
+				Not a member? <a href="signup">Signup</a>
 			</div>
 			</form>
 	</div>
